# NvidiaStockPrice

./: .gitignore  README.md  pyproject.toml  requirements.txt
metrics/: MAPE.py  R2.py  RMSE.py
src/: nvidia_prediction.py
visualizations/: comparision_plot.py
